Commit_30
Edit advertisment added to Server.java